feature filter by ratting and popularity, update product schema to optimize query
